# AshaEnv

./: .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
asha_env/: env.py
asha_env/data/: asha_kit.json  diseases.json  symptoms.json  villages.json
asha_env/patient/: comorbidity.py  epidemiology.py  generator.py
asha_env/tasks/: easy_task.py  hard_task.py  medium_task.py
baseline/: __init__.py  random_agent.py  rule_based_agent.py
graders/: __init__.py  base_grader.py  composite_grader.py  diagnosis_grader.py  efficiency_grader.py  referral_grader.py  safety_grader.py
scripts/: check_variance.py  validate_local.sh
server/: __init__.py  app.py
tests/: __init__.py  test_env.py  test_graders.py  test_patient_gen.py
