[project]
name = "asha-env"
version = "0.1.0"
description = "ASHA Agent Environment — maternal and newborn care consultation simulator for OpenEnv"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "stable-baselines3==2.3.2",
    "gymnasium==0.29.1",
    "numpy==1.26.4",
    "openai>=2.7.2",
    "pillow==10.3.0",
    "pytest==8.2.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
asha-env-server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
